# venator

./: flake.nix
venator-app/: .nix_npm_hash  package-lock.json
venator-app/src-tauri/: Cargo.toml
