[package]
name = "venator-app"
version = "0.2.1"
edition = "2021"
description = "A log and trace viewer for Rust tracing"
readme = "README.md"
repository = "https://github.com/kmdreko/venator"
license = "MIT"
keywords = ["tracing"]
include = ["/src", "/build.rs", "/tauri.conf.json", "/icons", "/gen", "/capabilities", "/dist"]

[[bin]]
name = "venator"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
bincode = { version = "1.3.3", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
open = "5.3.0"
tauri = { version = "2.0.1", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1.0.159", default-features = false, features = ["std", "derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net"] }

venator-engine = { version = "0.2.1", features = ["persist"] }

# HACK for Nix Package: 
# A dependency (surrealist -> tauri -> **reqwest**) contains hyper-tls as an actually optional dependency. 
# It ends up in the `Cargo.lock` file of tauri, but not in the one of surrealist. 
# Add the dep here to make sure it's in our Cargo.lock
# This may be a result of the following bug: https://github.com/rust-lang/cargo/issues/10801
# see: https://github.com/NixOS/nixpkgs/blob/23605324ae65b3be6a68e9163d232d56b2100f7a/pkgs/by-name/su/surrealist/package.nix#L52C1-L60C5
hyper-tls = { version="0.6.0", optional=true }
rustls-pemfile = { version= "*", optional=true }


[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
